--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2614,7 +2614,7 @@ input, select, textarea {
 					font-weight: 400;
 					letter-spacing: 0.25em;
 					margin: -0.625em 0 1.7em 0;
-					text-transform: uppercase;
+					text-transform: none;
 				}
 
 				ul.posts article header > :last-child {
@@ -2678,7 +2678,7 @@ input, select, textarea {
 				font-weight: 400;
 				letter-spacing: 0.25em;
 				margin: -0.625em 0 1.7em 0;
-				text-transform: uppercase;
+				text-transform: none;
 			}
 
 			.mini-post header .author {
@@ -2771,11 +2771,11 @@ input, select, textarea {
 				}
 
 			.post > header .meta {
-				padding: 3.75em 3em 1.75em 3em ;
+				padding: 3.75em 1em 1.75em 1em ;
 				border-left: solid 1px rgba(160, 160, 160, 0.3);
-				min-width: 17em;
+				min-width: 20em;
 				text-align: right;
-				width: 17em;
+				width: 20em;
 			}
 
 				.post > header .meta > * {
@@ -2794,7 +2794,7 @@ input, select, textarea {
 					font-weight: 800;
 					letter-spacing: 0.25em;
 					margin-top: 0.5em;
-					text-transform: uppercase;
+					text-transform: none;
 					white-space: nowrap;
 				}
 
@@ -3030,12 +3030,11 @@ input, select, textarea {
 
 	header p {
 		font-family: "Raleway", Helvetica, sans-serif;
-		font-size: 0.7em;
+		font-size: 0.9em;
 		font-weight: 400;
-		letter-spacing: 0.25em;
-		line-height: 2.5;
+		line-height: 1.5;
 		margin-top: -1em;
-		text-transform: uppercase;
+		text-transform: none;
 	}
 
 /* Table */
@@ -3380,8 +3379,8 @@ input, select, textarea {
 
 	#sidebar {
 		margin-right: 3em;
-		min-width: 22em;
-		width: 22em;
+		min-width: 20em;
+		width: 20em;
 	}
 
 		#sidebar > * {
@@ -3414,14 +3413,13 @@ input, select, textarea {
 	#intro .logo {
 		border-bottom: 0;
 		display: inline-block;
-		margin: 0 0 1em 0;
+		margin: 0 0 0 0;
 		overflow: hidden;
 		position: relative;
-		width: 4em;
+		width: 12em;
 	}
 
 		#intro .logo:before {
-			background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100px' height='100px' viewBox='0 0 100 100' preserveAspectRatio='none' zoomAndPan='disable'%3E%3Cpolygon points='0,0 100,0 100,25 50,0 0,25' style='fill:%23f4f4f4' /%3E%3Cpolygon points='0,100 100,100 100,75 50,100 0,75' style='fill:%23f4f4f4' /%3E%3C/svg%3E");
 			background-position: top left;
 			background-repeat: no-repeat;
 			background-size: 100% 100%;
@@ -3437,7 +3435,7 @@ input, select, textarea {
 		#intro .logo img {
 			display: block;
 			margin-left: -0.25em;
-			width: 4.5em;
+			width: 12em;
 		}
 
 	#intro header h2 {
